# Kaggle

./: .gitignore  Spaceship Titanic | XGBoost & CatBoost & LightGBM  Titanic Competition Notebook  pyproject.toml
PlayGround/S5E11/: S5E11 - Prediction Loan Payback - Feature Engenering.ipynb  S5E11 - Prediction Loan Payback - Genetic Programming.ipynb  S5E11 - Prediction Loan Payback - Linear Models.ipynb  S5E11 - Prediction Loan Payback - Tree Models.ipynb  geneticProgramming.ipynb  i.py  iDirectory.py  i_dir.py  predicting-loan-payback-s5e11-xgboost.ipynb
PlayGround/S5E11/Archive/attempt One - 0.83647/: S5E11 - Prediction Loan Payback - Combination Analysis.ipynb  S5E11 - Prediction Loan Payback - Genetic Programming.ipynb  S5E11 - Prediction Loan Payback - Linear Models.ipynb  S5E11 - Prediction Loan Payback - Tree Models.ipynb  i.py
PlayGround/S5E11/Archive/attempt One - 0.83647/catboost_info/: learn_error.tsv
PlayGround/S5E11/Archive/attempt One - 0.83647/model/: cat.joblib  lasso.joblib  ridge.joblib
PlayGround/S5E11/Archive/attempt One - 0.83647/submissions/: submission_gp.csv
PlayGround/S5E11/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
PlayGround/S5E11/catboost_info/learn/: events.out.tfevents
PlayGround/S5E11/catboost_info/tmp/: cat_feature_index.74ec47da-2320133f-73b00f8a-a4fc2080.tmp
PlayGround/S5E11/kaggle/: workingsubmission.csv
PlayGround/S5E11/kaggle/working/: submission.csv  submission.parquet
PlayGround/S5E11/kaggle/working/best/: lgb_params.csv
PlayGround/S5E11/kaggle/working/model/: elast.joblib  (+1 more)
(+3 files in other folders)
