[project]
name = "PlayGround"
version = "0.1.0"
description = ""
authors = [
    {name = "Raf Blanckaert",email = "R.Blanckaert@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "xgboost (>=3.1.1,<4.0.0)",
    "catboost (>=1.2.8,<2.0.0)",
    "lightgbm (>=4.6.0,<5.0.0)",
    "numpy (<2.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "ipykernel (>=7.1.0,<8.0.0)",
    "gplearn (>=0.4.2,<0.5.0)",
    "scikit-learn (==1.3.2)"
]

[tool.poetry]
package-mode = false
packages = [{include = "s5e11", from = "Play"}]


[tool.poetry.group.dev.dependencies]
ipykernel = "^7.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
